# douyin-parser

./: .gitignore  Dockerfile  README.md  api.py  docker-compose.prod.yml  docker-compose.yml  parsers.py  pyproject.toml  requirements.txt
.github/: docker-build.yml
static/: index.html
tests/: test_api.py
